--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ credential.json
 token.json
 db.sqlite3
 temp/
+__pycache__/
+core/__pycache__/
+migrations/__pycache__/
+email_automator/__pycache__/
